# Synapse-Scribe

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
._docs/: GPU-Training-Summary-313.md  Improoovements.md  discussing-next-steps-post-GPU-training.md  explainer-video-script.md  for-dummies.md  for-further-dev.md  implementation-task-list.md  logs-dashboard-to-check.md  phase-6-audit.md  phase-7a-training-stability.md  phase-7b-data-pipeline.md  phase-7c-model-downsampling.md  post-phase-6-collab.md  project-overview.md  real-data-training-plan.md  setup-collab.md  training-compact-sum.md  training-report.md  wNb_setup-api.md
app/: api.py  dashboard.py
models/: char_lm_5gram.json
notebooks/: 01_data_exploration.ipynb  02_signal_diagnostics.ipynb  03_preprocessing_qc.ipynb  04_model_training.ipynb  05_evaluation.ipynb  05b_neural_representations.ipynb  06_demo_visualization.ipynb  07_colab_training.ipynb
scripts/: build_char_lm.py  download_data.sh  evaluate.py  prepare_colab_data.py  realtime_demo.py  run_ablations.py  run_beam_eval.py  run_quality_check.py  train.py
src/: config.py
tests/: test_ablations.py  test_analysis_embeddings.py  test_api.py  test_beam_search.py  test_channel_quality.py  test_config.py  test_correlation.py  test_cross_session.py  test_ctc_plots.py  test_dashboard.py  test_dataset.py  test_decoding.py  test_embedding_plots.py  test_features.py  test_filter.py  test_gpt2_scorer.py  test_integration.py  test_lm_correction.py  (+20 more)
(+46 files in other folders)
